# DSNP

./: LICENSE  Makefile  Makefile.in  PROTOCOL  README.md  choice-configure.in  configure  configure.in  dsnp-spec.tex  generate.lm  init.sh
choice/: Makefile.in  connection.php  dispatch.php  route.php
choice/view/friend/image/: stream.php
choice/view/public/: footer.php  header.php
choicesocial/: Makefile.in  errdef.php  error.php  notification.php  selectconf.php
choicesocial/controller/friend/: image.php
choicesocial/controller/owner/: image.php
choicesocial/controller/public/: freq.php
choicesocial/controller/site/: index.php
choicesocial/db/: Makefile.in
choicesocial/doc/: INIT_SYSTEM.in  Makefile.in
choicesocial/scripts/: Makefile.in  command.sh
choicesocial/src/: controller.php  definitions.php  session.php
choicesocial/src/controller/: cred.php
choicesocial/src/controller/friend/: cred.php  index.php  user.php
choicesocial/src/controller/owner/: freq.php  user.php
choicesocial/src/controller/public/: cred.php
choicesocial/src/webroot/: error.php  index.php
choicesocial/src/webroot/css/: choicesocial.css
choicesocial/view/: functions.php
choicesocial/view/friend/: header.php
choicesocial/view/friend/image/: display.php
choicesocial/view/owner/index/: index.php
choicesocial/view/owner/user/: edit.php
choicesocial/webroot/: .htaccess
cs-orig/src/: command.php  database.php  message.php  usererr.php  view.php
cs-orig/src/controller/: image.php
cs-orig/src/controller/owner/: cred.php  index.php
cs-orig/src/view/owner/: header.php
db/: Makefile.in  choice.sql  clearnets.sql  common.sh  drop-db.sh  dsnpd.sql  dsnpk.sql  dsnpn.sql  init.sql  postinst-db.sh  update-001.sql  upgrade-1.sql  upgrade-10.sql  upgrade-11.sql  upgrade-13.sql  upgrade-14.sql  upgrade-15.sql  upgrade-16.sql  upgrade-17.sql  upgrade-18.sql  upgrade-19.sql  upgrade-2.sql  upgrade-20.sql  upgrade-3.sql  upgrade-4.sql  upgrade-5.sql  upgrade-6.sql  upgrade-7.sql  upgrade-8.sql  upgrade-9.sql
doc/: DSNP  INSTALL  INSTALL.choice  Makefile.in  PROTOCOL_VERSION  README  choice-new-site.sh  dsnp-spec.tex  dsnp-spec.txt  generate.lm  init-system.sh  new-site.sh  orig.tex
dsnpd/: Makefile.in  barrier.cc  base64.rl  broadcast.cpp  buffer.h  config.h.in  connect.cpp  conversion.cpp  db.cpp  disttree.cpp  disttree.h  dsnp.cpp  dsnp.h  dsnpd.cpp  dsnpd.h  encrypt.cc  encrypt.cpp  encrypt.h  error.h  flogin.cpp  friendreq.cc  friendreq.cpp  group.cpp  identity.cpp  keyagent.cc  keyagent.h  keys.cpp  log.cc  log.cpp  login.cpp  main.cpp  message.cpp  network.cpp  notification.cpp  parser.h  parser.rl  prefriend.cpp  queue.cpp  rcfile.rl  string.cpp  (+10 more)
dsnpd/db/: Makefile.in  resetall.sql.in
dsnpd/doc/: Makefile.in  init-system.sh  init.d-dsnpd.sh
dsnpd/src/: Makefile.in  base64.rl  broadcast.cc  command.rl  common.rl  conversion.cc  db.cc  dlist.h  dsnp.h  flogin.cc  identity.cc  keys.cc  listenfork.cc  message.cc  packet.h  packet.rl  rcfile.rl  string.h  tls.cc  user.cc
dua/: init.sh  notification.php
dua/php/: .htaccess  README
dua/php/app/: app_controller.php  app_error.php
dua/php/app/config/: core.php
etc/: Makefile.in  choice-Makefile.in  choicesocial.php  config.php  dsnpd.conf
issues/: issues.xml
scripts/: Makefile.in  init.sh.in  new-site.sh  new-user-cert.sh  self-signed-cert.sh  util.php
snua/: init.sh  notification.php
snua/php/app/: app_controller.php  app_error.php
spp/: init.sh  notification.php
spp/orig/: index.php
spp/orig/admin/: index.php  logout.php  snewuser.php
spp/orig/user/: answer.php  become.php  broadcast.php  frfinal.php  image.php  index.php  login.php  retftok.php  retrelid.php  sftoken.php  slogin.php  upload.php  wall.php
spp/php/: .htaccess  index.php  style.css
spp/php/admin/: login.php  newuser.php  slogin.php  snewuser.php
spp/php/app/: app_controller.php  app_error.php
spp/php/user/: answer.php  flogin.php  logout.php  sbecome.php  sflogin.php
src/: config.h.in  connect.cc  encrypt.cc  encrypt.h  login.cc  main.cc  network.cc  notification.cc  parser.rl  prefriend.cc  queue.cc  recipients.h  server.cc  string.cc
useragent/: .htaccess  Makefile.in  README  command.php  connection.php  controller.php  cron.php  database.php  definitions.php  dispatch.php  error.php  errtype.php  find.sh  header.php  init.sh  message.php  notification.php  regexes.php  route.php  runss.php  session.php  usererr.php  view.php
useragent/app/: app_controller.php  app_error.php  find.sh
useragent/app/config/: bootstrap.php  database.php  sites.php
useragent/app/controllers/: admin_controller.php  cred_controller.php  freq_controller.php  friends_controller.php  image_controller.php  secret_santa_controller.php  user_controller.php  wish_controller.php
useragent/app/models/: friend_claim.php  friend_group.php  friend_request.php  group_member.php  login_state.php  network.php  network_member.php  network_name.php  secret_santa.php  sent_friend_request.php  user.php  wish.php
useragent/app/webroot/: index.php
useragent/controller/: admin.php  cred.php  freq.php  image.php  index.php  main.php  site.php
useragent/controller/friend/: cred.php  image.php  index.php  user.php
useragent/controller/owner/: cred.php  freq.php  image.php  index.php  user.php
useragent/controller/public/: cred.php  freq.php  index.php  site.php
useragent/controller/site/: index.php
useragent/db/: common.sh  drop-db.sh  postinst-db.sh  upgrade-1.sql  upgrade-3.sql  upgrade-4.sql  upgrade-5.sql  upgrade-6.sql  upgrade-7.sql
useragent/errors/: generic.ctp
useragent/php/app/: find.sh
useragent/view/: functions.php
useragent/view/admin/: newuser.php
useragent/view/cred/: login.php
useragent/view/friend/: footer.php  header.php
useragent/view/index/: cindex.php  index.php
useragent/view/main/: index.php
useragent/view/owner/: header.php
useragent/view/public/: header.php
useragent/view/site/: index.php  newuser.php
useragent/webroot/: .htaccess  index.php
useragent/webroot/css/: dsnpua.css  fif.css
(+128 files in other folders)
