dnl  Copyright (c) 2008, Adrian Thurston <thurston@complang.org>
dnl
dnl  Permission to use, copy, modify, and/or distribute this software for any
dnl  purpose with or without fee is hereby granted, provided that the above
dnl  copyright notice and this permission notice appear in all copies.
dnl
dnl  THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
dnl  WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
dnl  MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
dnl  ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
dnl  WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
dnl  ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
dnl  OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  
AC_INIT(dsnpd/main.cpp)
AC_CONFIG_HEADER(dsnpd/config.h)

dnl Checks for programs.
AC_PROG_CXX
AC_LANG_C

dnl Check for definition of MAKE.
AC_PROG_MAKE_SET

dnl Need ragel to build.
dnl FIXME: distribute the ragel-generated code with the tarball.
AC_CHECK_PROG(RAGEL, ragel, ragel)
if test -z "$RAGEL"; then
	AC_ERROR([ragel not found])
fi

LDFLAGS="${LDFLAGS} -L/usr/lib/mysql"
AC_CHECK_HEADER([mysql/mysql.h], [], AC_ERROR([mysql/mysql.h not found]))
AC_CHECK_LIB(mysqlclient, mysql_init, [], AC_ERROR([libmysqlclient not found]))

AC_CHECK_HEADER([openssl/ssl.h], [], AC_ERROR([openssl/ssl.h not found]))
AC_CHECK_LIB(ssl, SSL_new, [], AC_ERROR([libssl not found]))

AC_ARG_ENABLE(spec, "build spec doc", [spec="dsnp-spec.pdf"], [spec=""])
AC_SUBST(spec)

dnl write output files
AC_OUTPUT(Makefile doc/Makefile etc/Makefile db/Makefile
	dsnpd/Makefile useragent/Makefile)

echo "configuration of dsnpd complete"
